# mbox2sqlite

./: .gitignore  Cargo.toml
src/: email.rs  lib.rs  mbox.rs  sqlite.rs
